V5: attribuer les erreurs aux employés
